# baobao

./: .gitignore  Cargo.toml  README.md  WIRING.md  bottom_shell.stl  front_panel.stl  generate_stl.py  memory.x  桌面天气站完整制作指南.md
.cargo/: config.toml
src/: ble.rs  buzzer.rs  comfort.rs  config.rs  display.rs  i2c_bus.rs  main.rs  network.rs  provisioning.rs  render.rs  sensors.rs  state.rs  wifi_store.rs
