[package]
name = "weather_station"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy 异步运行时
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1", features = ["defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
embassy-sync = "0.8.0"
embassy-futures = "0.1.2"

# WiFi / BLE 驱动
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.10.0" }
cyw43-firmware = { version = "0.1", features = ["bluetooth"] }
cyw43-setup = { version = "0.1", features = ["wifi", "bluetooth"] }

# BLE 协议栈
trouble-host = { version = "0.7.0", features = ["defmt", "peripheral", "gatt", "derive", "default-packet-pool-mtu-128"] }
bt-hci = "0.9"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# 网络栈
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "udp", "dhcpv4", "dns"] }

# 硬件抽象层
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# embedded-graphics
embedded-graphics = "0.8"

# 数据结构
heapless = "0.9"

# 静态变量
static_cell = "2"

# 数学库（用于 PIO 时钟分频、露点计算）
fixed = "1"
libm = "0.2"

# 调试
defmt = "1"
defmt-rtt = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = { version = "1", features = ["print-defmt"] }

# 内存分配器
embedded-alloc = "0.7"

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
